[gd_scene load_steps=13 format=3 uid="uid://dv2g5q64wnkm4"]

[ext_resource type="Texture2D" uid="uid://bxfxvlwir0r4" path="res://assets/sprites/gameover.png" id="1_5a708"]
[ext_resource type="Script" path="res://ui/bad_ending.gd" id="1_6ubf2"]
[ext_resource type="Texture2D" uid="uid://cga8vu4gajhah" path="res://assets/sprites/UI/RETRY_spritesheet.png" id="2_xoydc"]
[ext_resource type="Texture2D" uid="uid://dnp3w6khnllxt" path="res://assets/sprites/UI/RETRY_button.png" id="3_yad3a"]
[ext_resource type="Texture2D" uid="uid://c0wc66y7lmnoe" path="res://assets/sprites/UI/CREDITS_Spritesheet.png" id="5_bfsup"]
[ext_resource type="Texture2D" uid="uid://dnpw8m11rtkbu" path="res://assets/sprites/UI/CREDITS_button.png" id="6_1ufv0"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3sru8"]
texture = ExtResource("2_xoydc")
region_rect = Rect2(0, 0, 63, 20)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1baqx"]
texture = ExtResource("2_xoydc")
region_rect = Rect2(63, 0, 63, 20)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_j2e5j"]
texture = ExtResource("3_yad3a")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_odp3j"]
texture = ExtResource("5_bfsup")
region_rect = Rect2(0, 0, 63, 20)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lj3tu"]
texture = ExtResource("5_bfsup")
region_rect = Rect2(63, 0, 63, 20)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_c8dc4"]
texture = ExtResource("6_1ufv0")

[node name="BadEnding" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6ubf2")

[node name="TextureRect2" type="TextureRect" parent="."]
texture_repeat = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 446.0
offset_bottom = 446.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_5a708")
stretch_mode = 4

[node name="TextureRect" type="TextureRect" parent="."]
texture_repeat = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -132.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_5a708")
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.5
offset_top = -25.0
offset_right = 62.5
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 340

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 80
theme_override_constants/margin_bottom = 50

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 80
text = "From Boulder to..."
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 15

[node name="EnemyLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 25
text = "( 99 enemies lived to tell the tale... )"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 30

[node name="Retry" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(252, 80)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/hover = SubResource("StyleBoxTexture_3sru8")
theme_override_styles/pressed = SubResource("StyleBoxTexture_1baqx")
theme_override_styles/normal = SubResource("StyleBoxTexture_j2e5j")

[node name="Credits" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(252, 80)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/hover = SubResource("StyleBoxTexture_odp3j")
theme_override_styles/pressed = SubResource("StyleBoxTexture_lj3tu")
theme_override_styles/normal = SubResource("StyleBoxTexture_c8dc4")

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Credits" to="." method="_on_credits_pressed"]
